# ScriptArgsParser

./: README-DEV.md  README.md  example-config.yaml  example-parameters.toml  example.py  logging_setup.py  pyproject.toml  setup.cfg
.github/workflows/: pr-checker.yml  publish.yml
script_args_parser/: __init__.py  arguments.py  decorators.py  parser.py
tests/: common_fixtures.py  test_bool.py  test_changing_attribute.py  test_dataclass_argument.py  test_getting_attribute_value.py  test_integer.py  test_list.py  test_list_of_tuples.py  test_loading_user_values.py  test_parsing_arguments_definitions.py  test_path.py  test_required.py  test_string.py  test_switch.py  test_tuple.py
