[tool.poetry]
name = "script-args-parser"
version = "0.4.0"
description = "Script arguments parsing library."
authors = ["KRunchPL <krunchfrompoland@gmail.com>"]
readme = "README.md"
homepage = "https://github.com/KRunchPL/script-args-parser"
repository = "https://github.com/KRunchPL/script-args-parser"
documentation = "https://github.com/KRunchPL/script-args-parser"
license = "Apache-2.0"
packages = [
    { include = "script_args_parser" },
]

[tool.poetry.dependencies]
python = "^3.9"
toml = "^0.10.2"
PyYAML = "^5.4.1"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.4"
flake8-html = "^0.4.1"
flake8-todo = "^0.7"
pytest = "^6.2.2"
pytest-cov = "^2.11.1"
flake8-isort = "^4.1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
virtual_env = ".venv"
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
lines_between_types = 0
lines_between_sections = 1
lines_after_imports = 2
lines_before_imports = 0
include_trailing_comma = true
use_parentheses = true
multi_line_output = 3
line_length = 110
force_grid_wrap = 0
combine_as_imports = true
ensure_newline_before_comments = true
